# hermes-hora

./: CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  plugin.yaml  pyproject.toml  test_time_awareness.py  time_awareness.py
ports/claude-code/: README.md
